--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,7 +27,7 @@ $primary: (
     A400: var(--primary),
     A700: var(--primary),
     contrast: (50: white,
-        100: white,
+        100: #03678f,
         200: white,
         300: white,
         400: white,
