--- a/src/app/components/list-proyecto-academico.component/list-proyecto-academico.component.component.html
+++ b/src/app/components/list-proyecto-academico.component/list-proyecto-academico.component.component.html
@@ -1,104 +1,124 @@
 <mat-card *ngIf="!loading" class="mat-card">
   <mat-card-header>
     <mat-card-title>{{ 'consultaproyecto.titulo' | translate }}</mat-card-title>
-  </mat-card-header>
 
+  </mat-card-header>
+  <br>
   <mat-card-content>
-    <fieldset class="fieldseter">
+    <fieldset class="fieldseter border">
       <legend>
-        <small>&nbsp; {{ 'consultaproyecto.titulo' | translate }} </small>
+        &nbsp; <b>{{ 'consultaproyecto.titulo' | translate }}</b> &nbsp;&nbsp;
       </legend>
 
-      <mat-card style="margin: 0px; padding: 0px;">
-        <mat-card-content class="explicacion">
-          {{ 'consultaproyecto.explicacacion' | translate }}
-        </mat-card-content>
-      </mat-card>
+      <div class="p-5 info">
+        <mat-icon class="info-icon">info</mat-icon> &nbsp;
+        <span>{{ 'consultaproyecto.explicacacion' | translate }}</span>
+      </div>
+      <br>
 
-      <mat-card style="margin-top: 16px;">
-        <mat-card-content style="padding: 0rem;">
-          <mat-form-field>
-            <mat-label>{{ 'GLOBAL.buscar' | translate }}</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="{{ 'consultaproyecto.buscar_en_toda_la_tabla' | translate }}" #input>
-          </mat-form-field>
+      <div class="search-container">
 
-          <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource" matSort>
+        <input matInput (keyup)="applyFilter($event)" type="text" class="search-input" placeholder="{{ 'consultaproyecto.buscar_en_toda_la_tabla' | translate }}..." #input>
+        <mat-icon class="icon-search" matPrefix>search</mat-icon>
+      </div>
 
-              <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
-                <td mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Id}} </td>
-              </ng-container>
 
-              <ng-container matColumnDef="facultad">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Facultad </th>
-                <td mat-cell *matCellDef="let row"> {{row.NombreFacultad}} </td>
-              </ng-container>
+      
 
-              <ng-container matColumnDef="nombre_proyecto">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre proyecto </th>
-                <td mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Nombre}}</td>
-              </ng-container>
+      <div class="">
+        <mat-table mat-table matSortActive="id" [dataSource]="dataSource" matSort class="demo-table">
 
-              <ng-container matColumnDef="nivel_proyecto">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nivel proyecto </th>
-                <td mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.NivelFormacionId.Nombre}} </td>
-              </ng-container>
+          <ng-container matColumnDef="id" sticky>
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.id' |
+                translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Id}} </mat-cell>
+          </ng-container>
 
-              <ng-container matColumnDef="codigo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Código </th>
-                <td mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Codigo}} </td>
-              </ng-container>
+          <ng-container matColumnDef="facultad">
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.facultad' |
+                translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.NombreFacultad}} </mat-cell>
+          </ng-container>
 
-              <ng-container matColumnDef="cod_snies">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Código SNIES </th>
-                <td mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.CodigoSnies}} </td>
-              </ng-container>
+          <ng-container matColumnDef="nombre_proyecto">
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{
+                'consultaproyecto.nombre_proyecto' | translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Nombre}}</mat-cell>
+          </ng-container>
 
-              <ng-container matColumnDef="activo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Activo </th>
-                <td mat-cell *matCellDef="let row"> {{row.OfertaLetra}} </td>
-              </ng-container>
+          <ng-container matColumnDef="nivel_proyecto">
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{
+                'consultaproyecto.nivel_proyecto' | translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.NivelFormacionId.Nombre}} </mat-cell>
+          </ng-container>
 
-              <ng-container matColumnDef="vencimiento_registro">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Vencimiento registro </th>
-                <td mat-cell *matCellDef="let row"> {{row.FechaVenimientoAcreditacion }} </td>
-              </ng-container>
+          <ng-container matColumnDef="codigo">
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.codigo' |
+                translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.Codigo}} </mat-cell>
+          </ng-container>
 
-              <ng-container matColumnDef="vencimiento_alta_calidad">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Vencimiento alta calidad </th>
-                <td mat-cell *matCellDef="let row"> {{row.FechaVenimientoCalidad }} </td>
-              </ng-container>
+          <ng-container matColumnDef="cod_snies">
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.cod_snies' |
+                translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.ProyectoAcademico.CodigoSnies}} </mat-cell>
+          </ng-container>
 
-              <ng-container matColumnDef="acciones">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
-                <td mat-cell *matCellDef="let row"> 
-                    <mat-icon class="link" (click)="promesaid_consulta(row.ProyectoAcademico.Id)" aria-hidden="false" title="{{'consultaproyecto.consulta' | translate}}" fontIcon="search_outline"></mat-icon>
-                    <mat-icon class="link" (click)="promesaid_modificar(row.ProyectoAcademico.Id)" aria-hidden="false" title="{{'consultaproyecto.editar' | translate}}"
-                    fontIcon="edit_outline"></mat-icon>
-                    <mat-icon class="link" (click)="inhabilitarProyecto(row.ProyectoAcademico.Id)" aria-hidden="false"  fontIcon="delete_outline" title="{{'consultaproyecto.inhabilitar' | translate}}" ></mat-icon>
-                                     
-                </td>
-              </ng-container>
+          <ng-container matColumnDef="activo">
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{ 'consultaproyecto.activo' |
+                translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.OfertaLetra}} </mat-cell>
+          </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <ng-container matColumnDef="vencimiento_registro">
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{
+                'consultaproyecto.vencimiento_registro' | translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row" class="center"> {{row.FechaVenimientoAcreditacion }} </mat-cell>
+          </ng-container>
 
-              <!-- Row shown when there is no matching data. -->
-              <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-              </tr>
-            </table>
+          <ng-container matColumnDef="vencimiento_alta_calidad">
+            <mat-header-cell class="text-left" *matHeaderCellDef mat-sort-header> <b>{{
+                'consultaproyecto.vencimiento_alta_calidad' | translate }}</b> </mat-header-cell>
+            <mat-cell *matCellDef="let row"> {{row.FechaVenimientoCalidad }} </mat-cell>
+          </ng-container>
 
-            <mat-paginator #paginator [hidePageSize]="true" [showFirstLastButtons]="true" [pageSize]="10"
-              aria-label="Select page of users">
-            </mat-paginator>
-          </div>
 
-        </mat-card-content>
-      </mat-card>
+          <ng-container matColumnDef="acciones" stickyEnd>
+            <mat-header-cell class="text-left " rowspan="3" *matHeaderCellDef mat-sort-header><b>
+                {{'consultaproyecto.acciones' |
+                translate}}</b> </mat-header-cell>
+
+            <mat-cell *matCellDef="let row">
+              <mat-icon class="link icono" (click)="promesaid_consulta(row.ProyectoAcademico.Id)" aria-hidden="false"
+                title="{{'consultaproyecto.consulta' | translate}}" fontIcon="search_outline"></mat-icon>
+
+              <mat-icon class="link icono" (click)="promesaid_modificar(row.ProyectoAcademico.Id)" aria-hidden="false"
+                title="{{'consultaproyecto.editar' | translate}}" fontIcon="edit_outline"></mat-icon>
+
+              <mat-icon class="link icono " (click)="inhabilitarProyecto(row.ProyectoAcademico.Id)" aria-hidden="false"
+                fontIcon="delete_outline" title="{{'consultaproyecto.inhabilitar' | translate}}"></mat-icon>
+            </mat-cell>
+          </ng-container>
+
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">{{'consultaproyecto.no_se_encontro_informacion_con' | translate}}:
+              "{{input.value}}"</td>
+          </tr>
+        </mat-table>
+        <br>
+        <mat-paginator #paginator [hidePageSize]="true" [showFirstLastButtons]="true" [pageSize]="10"
+          aria-label="Select page of users">
+        </mat-paginator>
+      </div>
+
+      <br>
     </fieldset>
   </mat-card-content>
 </mat-card>
+<br><br>
+  <mat-progress-spinner *ngIf="loading" mode="indeterminate" diameter="100"></mat-progress-spinner>
 
-<mat-progress-spinner *ngIf="loading" mode="indeterminate" diameter="100"></mat-progress-spinner>
