--- a/src/app/components/list-registro-proyecto-academico/list-registro-proyecto-academico.component.scss
+++ b/src/app/components/list-registro-proyecto-academico/list-registro-proyecto-academico.component.scss
@@ -1,3 +1,148 @@
-.border{
-    border: 2px solid #03678f !important;
+
+.info-p {
+    background-color: #f6f2cf;
+    margin: 40px;
+    border-radius: 5px;
+    border: solid 1px #ddc342;
+    display: flex;
+    align-items: center;
+    color: #3c220c;
+    text-align: center;
 }
+
+.link:hover {
+    cursor: pointer;
+}
+
+.icono:hover {
+    color: #03678f;
+}
+
+.icon-cloud:hover{
+    background: #03678f;
+}
+
+.info-icon {
+    color: #ad9930;
+}
+
+.btn-primary {
+    border: solid 1px #03678f;
+    font-weight: 300;
+    background-color: #03678f;
+    border-color: #03678f;
+    margin: 0 80px;
+    cursor: pointer;
+    color: white !important;
+  }
+  
+
+  .container-buttons{
+    display: flex;
+    justify-content: center;    
+  }
+
+  .demo-table {
+    max-width: 96%;
+    min-width: 96% !important;
+    overflow: auto;
+    border: 1px solid #edf1f7;
+    margin: 20px;
+}
+
+.text-center{
+    display: flex;
+    justify-content: center;
+}
+
+.mat-mdc-header-cell {
+    border-bottom: 1px solid #edf1f7;
+}
+
+.mat-mdc-row:nth-child(odd) .mat-mdc-cell {
+    background-color: #f7f9fc;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+    background-color: #edf1f7;
+}
+
+.border {
+    border: 1px solid #0093cd !important;
+    border-radius: 10px;
+    margin: 5px;
+    margin: 20px;
+}
+
+.mat-column-Id{
+    max-width: 65px;
+    border-right: 1px solid #edf1f7;
+    display: flex;
+    justify-content: center;
+}
+
+.mat-column-Registro{
+    //max-width: 65px;
+    border-right: 1px solid #edf1f7;
+    display: flex;
+    justify-content: center;
+}
+
+.mat-column-Vigencia{
+    max-width: 100px;
+    border-right: 1px solid #edf1f7;
+    display: flex;
+    justify-content: center;
+}
+
+.mat-column-Tipo-de-registro{
+    max-width: 200px;
+    border-right: 1px solid #edf1f7;
+}
+
+.mat-column-Tiempo-de-vigencia{
+    max-width: 200px;
+    border-right: 1px solid #edf1f7;
+    display: flex;
+    justify-content: center;
+}
+
+.mat-column-Activo  {
+    max-width: 70px;
+    border-right: 1px solid #edf1f7;
+    display: flex;
+    justify-content: center;
+}
+
+.mat-column-Fecha-Inicio-Registro  {
+    max-width: 200px;
+    border-right: 1px solid #edf1f7;
+    display: flex;
+    justify-content: center;
+}
+
+.mat-column-Fecha-Vencimiento-Registro  {
+    max-width: 200px;
+    border-right: 1px solid #edf1f7;
+    display: flex;
+    justify-content: center;
+}
+.mat-column-Documento  {
+    border-right: 1px solid #edf1f7;
+    display: flex;
+    justify-content: center;
+}
+
+.nb-card-header{
+    padding: 1rem 1.25rem;
+    border-bottom: 1px solid #edf1f7;
+    border-top-left-radius: radius;
+    border-top-right-radius: radius;
+    color: #222b45;
+    font-family: Roboto;
+    font-size: .9375rem;
+    font-weight: 600;
+    line-height: 1.5rem;
+}
+
+
