--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,9 @@
-@import url("https://pruebasassets.portaloas.udistrital.edu.co/oas.css");
-
 .main-container{
-    margin: 15px 15px;
-    width: 95%;
+    margin: 40px 15px 0px 15px;
+    width: 100%;
+}
+
+body{
+    background-color: black;
 }
 
