--- a/src/app/components/consulta-proyecto-academico/consulta-proyecto-academico.component.scss
+++ b/src/app/components/consulta-proyecto-academico/consulta-proyecto-academico.component.scss
@@ -1,3 +1,101 @@
 .prueba{
     width: 1000px;
 }
+
+.contenedor{
+    font-family: sans-serif;
+}
+
+.input{
+    width: 70%;
+}
+
+.text-center{
+    display: flex;
+    justify-content: center;
+}
+
+.container-form{
+    display: flex;
+
+}
+
+.col-sm-6 {
+    /* Estilos para las columnas */
+    flex: 0 0 50%; /* Ocúpan 50% del ancho en pantallas pequeñas */
+    max-width: 50%; /* Máximo 50% del ancho */
+}
+
+.boton-primary {
+    border: solid 1px #03678f;
+    font-weight: 300;
+    background-color: #03678f;
+    border-color: #03678f;
+    margin: 0 80px;
+    cursor: pointer;
+    color: white !important;
+  }
+  
+
+  .container-buttons{
+    display: flex;
+    justify-content: center;    
+  }
+
+  .container-table{
+    display: flex;
+    justify-content: center;
+  }
+
+.demo-table {
+    overflow: auto;
+    border: 1px solid #edf1f7;
+
+}
+
+.mat-mdc-row .mat-mdc-cell {
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
+    cursor: pointer;
+}
+
+.mat-mdc-header-cell {
+    border-bottom: 1px solid #edf1f7;
+}
+
+.mat-mdc-header-row {
+    text-align: left;
+
+}
+
+.mat-mdc-row:nth-child(odd) .mat-mdc-cell {
+    background-color: #f7f9fc;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+    background-color: #edf1f7;
+}
+
+.mat-mdc-table-sticky-border-elem-right {
+    border-left: 1px solid #edf1f7;
+}
+
+.mat-mdc-table-sticky-border-elem-left {
+    border-right: 1px solid #edf1f7;
+}
+
+.center {
+    align-items: center;
+}
+
+.mat-column-nombre {
+    max-width: 80%;
+}
+
+.mat-column-activo {
+    max-width: 20%;
+    border-right: 1px solid #edf1f7;
+}
+
+  
+  
