--- a/src/app/components/list-proyecto-academico.component/list-proyecto-academico.component.component.scss
+++ b/src/app/components/list-proyecto-academico.component/list-proyecto-academico.component.component.scss
@@ -11,9 +11,31 @@
     margin: 5px;
 }
 
-.p-5 {
-    padding: 12px;
+.nb-card-header {
+    padding: 1rem 1.25rem;
+    border-bottom: 1px solid #edf1f7;
+    border-top-left-radius: radius;
+    border-top-right-radius: radius;
+    color: #222b45;
+    font-family: sans-serif;
+    font-size: .9375rem;
+    font-weight: 700;
+    line-height: 1.5rem;
 }
+
+.small{
+    font-weight: 600;
+    font-family: sans-serif;
+}
+
+.explicacion {
+    font-size: 12pt;
+}
+
+.titulo {
+    font-size: 16pt;
+}
+
 
 .color {
     color: #03678f;
@@ -46,7 +68,7 @@
 }
 
 .info-icon {
-    padding-right: 15px;
+    padding-right: 30px;
     color: #ad9930;
 }
 
@@ -56,7 +78,7 @@
 }
 
 .search-input {
-    width: 200px;
+    width: 250px;
     padding: 10px 40px 10px 15px;
     border-radius: 1.5px;
     border: 1px solid #ccc;
@@ -71,14 +93,14 @@
     border-color: #03678f;
 }
 
-.icon-search {
+.icon-busqueda {
     border: solid 1.5px #03678f;
     color: white;
     font-size: 25px;
     border-radius: 1px;
     padding: 6px;
-    padding-bottom: 8px;
-    padding-right: 10px;
+    padding-bottom: 32px;
+    padding-right: 30px;
     background-color: #03678f;
 }
 
