--- a/src/app/components/list-registro-proyecto-academico/list-registro-proyecto-academico.component.html
+++ b/src/app/components/list-registro-proyecto-academico/list-registro-proyecto-academico.component.html
@@ -1,90 +1,102 @@
 <!-- <toaster-container [toasterconfig]="config"></toaster-container> -->
 <div class="col-md-12 col-lg-12 ">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <mat-card class="mat-elevation-z4 border" color="#03678f" align="center" [ngClass]="'size-' + cardSize">
-        <mat-card-header>{{ 'historial_registro.titulo' | translate }}</mat-card-header>
-        <mat-card>
-            <mat-card-content>
-                {{ 'historial_registro.explicacacion' | translate }}
-            </mat-card-content>
-        </mat-card>
-        <mat-card>
-            <mat-card-content>
-                <mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 ">
-                    <ng-container matColFumnDef="Id">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'consultaproyecto.id' | translate }}</mat-header-cell>
-                        <mat-cell *matCellDef="let row; let i = index" class="text-capitalize"> {{row.Id}} </mat-cell>
-                    </ng-container>
+    
+        <br>
+        <div class="text-center">
+            <mat-card-header><b >{{ 'historial_registro.titulo' | translate }}</b></mat-card-header>
+        </div>
+        
+                <div class="info-p p-3">
+                    <mat-icon class="info-icon">info</mat-icon> &nbsp;
+                    {{ 'historial_registro.explicacacion' | translate }}
+                </div>
+        
+                <div class="container-table">
+                    <mat-table [dataSource]="dataSource" class="demo-table">
+                        <ng-container matColumnDef="Id">
+                            <mat-header-cell *matHeaderCellDef ><b>{{ 'consultaproyecto.id' | translate }}</b>
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let row" class="text-capitalize"> {{row.Id}} </mat-cell>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="Registro">
+                            <mat-header-cell *matHeaderCellDef ><b> {{ 'historial_registro.registro' | translate
+                                }}</b>
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.NumeroActoAdministrativo }} </mat-cell>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="Vigencia">
+                            <mat-header-cell *matHeaderCellDef ><b>{{ 'historial_registro.vigencia' | translate
+                                }}</b>
+                             </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.AnoActoAdministrativoId}} </mat-cell>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="Tipo de registro">
+                            <mat-header-cell *matHeaderCellDef ><b>{{ 'historial_registro.tipo_registro' |
+                                translate }}</b>
+                             </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.TipoRegistroId.Nombre }} </mat-cell>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="Tiempo de vigencia">
+                            <mat-header-cell *matHeaderCellDef ><b>{{ 'historial_registro.tiempo' | translate }}</b>
 
-                    <ng-container matColumnDef="Registro">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'historial_registro.registro' | translate
-                            }}</mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.NumeroActoAdministrativo }} </mat-cell>
-                    </ng-container>
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.VigenciaActoAdministrativo }} </mat-cell>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="Activo">
+                            <mat-header-cell *matHeaderCellDef ><b>{{ 'historial_registro.activo' | translate }}</b>
 
-                    <ng-container matColumnDef="Vigencia">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'historial_registro.vigencia' | translate
-                            }} </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.AnoActoAdministrativoId}} </mat-cell>
-                    </ng-container>
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.ActivoLetra }} </mat-cell>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="Fecha Inicio Registro">
+                            <mat-header-cell *matHeaderCellDef ><b>{{ 'historial_registro.fecha_inicio' |
+                                translate }}</b>
+                             </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.FechaCreacionActoAdministrativo  }}
+                            </mat-cell>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="Fecha Vencimiento Registro">
+                            <mat-header-cell *matHeaderCellDef><b> {{ 'historial_registro.fecha_vencimiento' | translate }}</b>
 
-                    <ng-container matColumnDef="Tipo de registro">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'historial_registro.tipo_registro' |
-                            translate }} </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.TipoRegistroId.Nombre }} </mat-cell>
-                    </ng-container>
-
-                    <ng-container matColumnDef="Documento">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'historial_registro.documento' | translate
-                            }} </mat-header-cell>
-                        <mat-cell *matCellDef="let row">
-                            <button mat-button type="button" (click)="downloadFile(row.EnlaceActo)">
-                                <mat-icon>cloud_download</mat-icon>
-                            </button>
-                        </mat-cell>
-                    </ng-container>
-
-                    <ng-container matColumnDef="Tiempo de vigencia">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'historial_registro.tiempo' | translate }}
-                        </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.VigenciaActoAdministrativo }} </mat-cell>
-                    </ng-container>
-
-                    <ng-container matColumnDef="Activo">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'historial_registro.activo' | translate }}
-                        </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.ActivoLetra }} </mat-cell>
-                    </ng-container>
-
-                    <ng-container matColumnDef="Fecha Inicio Registro">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'historial_registro.fecha_inicio' |
-                            translate }} </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.FechaCreacionActoAdministrativo | date:'dd/MM/yyyy' }}
-                        </mat-cell>
-                    </ng-container>
-
-                    <ng-container matColumnDef="Fecha Vencimiento Registro">
-                        <mat-header-cell *matHeaderCellDef> {{ 'historial_registro.fecha_vencimiento' | translate }}
-                        </mat-header-cell>
-                        <mat-cell *matCellDef="let row"> {{row.VencimientoActoAdministrativo | date:'dd/MM/yyyy' }}
-                        </mat-cell>
-                    </ng-container>
-
-                    <mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="highlight(row)"></mat-row>
-                </mat-table>
-            </mat-card-content>
-        </mat-card>
-        <div class="row">
-            <div class="col-xs-12 col-sm-4"> <button mat-button (click)="OpenRegistroCalificado()">{{
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.VencimientoActoAdministrativo }}
+                            </mat-cell>
+                        </ng-container>
+    
+                        <ng-container matColumnDef="Documento">
+                            <mat-header-cell *matHeaderCellDef ><b>{{ 'historial_registro.documento' | translate
+                                }}</b>
+                             </mat-header-cell>
+                            <mat-cell *matCellDef="let row">
+                                <mat-icon class="link icono " (click)="downloadFile(row.EnlaceActo)" aria-hidden="false" fontIcon="cloud_download" ></mat-icon>
+                            </mat-cell>
+                        </ng-container>
+    
+                        <mat-header-row *matHeaderRowDef="displayedColumns" class="encabezado"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="highlight(row)"></mat-row>
+                    </mat-table>
+                </div>
+           
+        
+        <br>
+        <div class="container-buttons">
+            <div class=""> <button class="btn btn-primary" (click)="OpenRegistroCalificado()">{{
                     'historial_registro.calificado' | translate }}</button> </div>
-            <div class="col-xs-12 col-sm-4"> <button mat-button (click)="OpenRegistroAlta()">{{
+            <div class=""> <button class="btn btn-primary" (click)="OpenRegistroAlta()">{{
                     'historial_registro.alta' |
                     translate }}</button></div>
-            <div class="col-xs-12 col-sm-4"> <button mat-button (click)="onclick()">{{ 'GLOBAL.aceptar' | translate
+            <div class=""> <button class="btn btn-primary" (click)="onclick()">{{ 'GLOBAL.aceptar' | translate
                     }}</button>
             </div>
         </div>
-    </mat-card>
+        <br>
 
 </div>
