--- a/src/app/components/registro-proyecto-academico/registro-proyecto-academico.component.scss
+++ b/src/app/components/registro-proyecto-academico/registro-proyecto-academico.component.scss
@@ -1,69 +1,58 @@
-:host ::ng-deep .nb-theme-default ng2-smart-table table tr td {
-    font-size: 0.85rem;
+.grid {
+    display: grid !important;
+    justify-content: center !important;
 }
 
-.example-container {
-    display: flex;
-    flex-direction: column;
-    min-width: 300px;
-}
 
-.example-header {
-    min-height: 64px;
-    padding: 8px 24px 0;
-}
-
-.mat-form-field {
-    font-size: 14px;
+.input-p {
     width: 100%;
+    margin-bottom: 30px;
+    background-color: transparent;
 }
 
-.mat-table {
-    overflow: auto;
+.mat-mdc-form-field-error {
+    display: block;
+    color: #f44336;
+    font-size: 9.5pt;
 }
 
-.mat-row:nth-child(even) {
-    background-color: rgb(255, 255, 255);
+.boton-primary {
+    border: solid 1px #03678f;
+    font-weight: 300;
+    background-color: #03678f;
+    border-color: #03678f;
+    margin: 0 80px;
+    cursor: pointer;
+    color: white !important;
+  }
+
+  .label-p{
+    color: #8f9bb3;
+    font-family: sans-serif;
 }
 
-.mat-row:nth-child(odd) {
-    background-color: rgb(255, 255, 255);
+.boton-archivo{
+    background-color: #03678f;
+    color: white;
 }
 
-.columna {
-    width: 33%;
-    float: left;
+.icono-archivo{
+    color: white;
 }
 
-@media (max-width: 500px) {
-    .columna {
-        width: auto;
-        float: none;
-    }
-}
 
-.mat-success {
-    background-color: green;
-    color: #fff;
-}
 
-.mat-success-1 {
-    background-color: rgb(196, 199, 16);
-    color: #fff;
+::ng-deep.col-form-label {
+    padding-top: calc(0.375rem + 1px);
+    padding-bottom: calc(0.375rem + 1px);
+    margin-bottom: 0;
+    font-size: inherit;
+    line-height: 1.5;
+    color: #8f9bb3;
 }
-
-.capitalize {
-    text-transform: capitalize;
-}
-
-.inner {
-    margin: auto;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-}
-
-.encabezado {
-    background-color: rgb(220, 221, 238);
-}
+:host ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) {
+    background-color: transparent !important;
+  }
+  :host ::ng-deep  .mat-mdc-form-field-focus-overlay {
+    background-color: transparent !important;
+  }
