--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,15 +2,6 @@
 
 @use '@angular/material' as mat;
 
-@import url("https://pruebasassets.portaloas.udistrital.edu.co/urano-style.css");
-@import url("https://pruebasassets.portaloas.udistrital.edu.co/oas.css");
-@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
-@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0");
-
-
-
-// material customize
-
 $primary: (
     50: var(--primary),
     100: var(--primary),
@@ -27,7 +18,7 @@ $primary: (
     A400: var(--primary),
     A700: var(--primary),
     contrast: (50: white,
-        100: #03678f,
+        100: white,
         200: white,
         300: white,
         400: white,
@@ -57,13 +48,3 @@ $my-theme: mat.define-light-theme((
 ));
 
 @include mat.all-component-themes($my-theme);
-
-html,
-body {
-    height: 100%;
-}
-body {
-    background-color: #f8f9fa;
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-}
