feat: sga_documentacion: issue #33 terminado

--- a/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.html
+++ b/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.html
@@ -563,7 +563,7 @@
                                     </mat-card>
                                 </div>
 
-                                <div>
+                                <div class="container-buttons">
                                     <button class="m-3 boton-primary" mat-button matStepperPrevious>{{ 'proyecto.regresar' | translate
                                         }}</button>
                                     <button class="m-3 boton-primary" mat-button (click)="stepper.reset()">{{ 'proyecto.reset' |
