--- a/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.scss
+++ b/src/app/modules/crear-proyecto-academico/crud-proyecto-academico/crud-proyecto-academico.component.scss
@@ -296,3 +296,8 @@ label {
     box-shadow: inset 0 0 0 1px var(--mat-datepicker-calendar-date-today-selected-state-outline-color);
     color: white !important;
 }
+
+.container-buttons {
+    display: flex;
+    justify-content: center;
+}
