feat: udistrital/sga_documentacion#96 Ajuste del componente, cambio en la gestion de estado.

--- a/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
+++ b/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
@@ -185,7 +185,7 @@
                 class="link icono"
                 (click)="inhabilitarProyecto(row.ProyectoAcademico)"
                 aria-hidden="false"
-                [fontIcon]="row.ProyectoAcademico.Activo ? 'check_circle' : 'cancel'"
+                [fontIcon]="row.ProyectoAcademico.Oferta ? 'cancel' : 'check_circle'"
                 title="{{ 'consultaproyecto.inhabilitar' | translate }}"
               ></mat-icon>
             </mat-cell>
