feat: udistrital/sga_documentacion#125 Se integra spinner-util

--- a/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
+++ b/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf="!loading" class="mat-card">
+<mat-card class="mat-card">
   <mat-card-header class="nb-card-header">{{ 'consultaproyecto.titulo' | translate }}
 
   </mat-card-header>
@@ -118,5 +118,4 @@
   </mat-card-content>
 </mat-card>
 <br><br><br><br>
-  <mat-progress-spinner *ngIf="loading" mode="indeterminate" diameter="100"></mat-progress-spinner>
 
