feat: udistrital/sga_documentacion#142 Modificación de los componentes para asegurar reactividad en los mismos

--- a/src/app/modules/crear-proyecto-academico/list-enfasis/list-enfasis.component.scss
+++ b/src/app/modules/crear-proyecto-academico/list-enfasis/list-enfasis.component.scss
@@ -52,3 +52,11 @@ mat-cell, mat-header-cell{
     cursor: pointer;
     color: white !important;
 }
+
+.container-table {
+    overflow: overlay;
+}
+
+mat-table {
+    display: table;
+}
