--- a/src/app/modules/lista-proyecto-academico/list-registro-proyecto-academico/list-registro-proyecto-academico.component.html
+++ b/src/app/modules/lista-proyecto-academico/list-registro-proyecto-academico/list-registro-proyecto-academico.component.html
@@ -88,12 +88,12 @@
         
         <br>
         <div class="container-buttons">
-            <div class=""> <button class="btn btn-primary" (click)="OpenRegistroCalificado()">{{
+            <div class="div-button"> <button class="btn btn-primary" (click)="OpenRegistroCalificado()">{{
                     'historial_registro.calificado' | translate }}</button> </div>
-            <div class=""> <button class="btn btn-primary" (click)="OpenRegistroAlta()">{{
+            <div class="div-button"> <button class="btn btn-primary" (click)="OpenRegistroAlta()">{{
                     'historial_registro.alta' |
                     translate }}</button></div>
-            <div class=""> <button class="btn btn-primary" (click)="onclick()">{{ 'GLOBAL.aceptar' | translate
+            <div class="div-button"> <button class="btn btn-primary" (click)="onclick()">{{ 'GLOBAL.aceptar' | translate
                     }}</button>
             </div>
         </div>
