--- a/src/app/modules/lista-proyecto-academico/registro-proyecto-academico/registro-proyecto-academico.component.html
+++ b/src/app/modules/lista-proyecto-academico/registro-proyecto-academico/registro-proyecto-academico.component.html
@@ -88,7 +88,7 @@
             </mat-card>
         </div>
 
-        <button class="boton-primary mb-4" mat-button (click)="crearregistro()" type="submit">{{
+        <button class="boton-primary mb-4 auto-button" mat-button (click)="crearregistro()" type="submit">{{
             'historial_registro.crear_registro' | translate
             }}</button>
 
