--- a/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
+++ b/src/app/modules/lista-proyecto-academico/list-proyecto-academico.component/list-proyecto-academico.component.component.html
@@ -3,6 +3,9 @@
 
   </mat-card-header>
   <mat-card-content>
+    <div [class.loader-div]="loading">
+      <mat-spinner *ngIf="loading" diameter="100" color="primary"></mat-spinner>
+    </div>
     <fieldset class="fieldseter border">
       <legend>
         <small class="small">&nbsp; {{ "consultaproyecto.titulo" | translate }} </small>
@@ -117,6 +120,3 @@
     </fieldset>
   </mat-card-content>
 </mat-card>
-<br><br><br><br>
-  <mat-progress-spinner *ngIf="loading" mode="indeterminate" diameter="100"></mat-progress-spinner>
-
