--- a/src/app/modules/lista-proyecto-academico/registro-proyecto-academico/registro-proyecto-academico.component.scss
+++ b/src/app/modules/lista-proyecto-academico/registro-proyecto-academico/registro-proyecto-academico.component.scss
@@ -58,3 +58,8 @@
 :host ::ng-deep .mat-mdc-form-field-focus-overlay {
     background-color: transparent !important;
 }
+
+.auto-button {
+    height: auto;
+    max-height: 100px;
+}
